--- a/css/assignment1.css
+++ b/css/assignment1.css
@@ -28,7 +28,7 @@ nav, ul, li, button
 {
     width: 100%;
     font-size: 20px;
-    background-color: gray;
+    background-color: rgb(245, 230, 230);
     cursor: pointer;
 }
 
