--- a/css/assignment1.css
+++ b/css/assignment1.css
@@ -15,6 +15,22 @@ nav
     text-align: center;
 }
 
+.sr-only {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    color: rgb(0,0,0);
+    background-color: rgb(255,255,255);
+  
+  }
+
+
 nav, ul 
 {
     list-style-type: none;
